1. 界面设计, 授权按钮基本完成

--- a/main.html
+++ b/main.html
@@ -123,7 +123,7 @@
     <div class="container">
         <div class="card">
             <h1>百度网盘授权</h1>
-            <p class="subtitle">点击下方按钮进行授权，获取授权码后使用Python代码进行后续操作</p>
+            <p class="subtitle">点击下方按钮进行授权，获取授权码</p>
 
             <button id="auth-btn" class="auth-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
@@ -142,7 +142,7 @@
                     <li>点击上方"授权百度账号"按钮</li>
                     <li>在百度授权页面登录并授权</li>
                     <li>授权完成后，页面将显示授权码</li>
-                    <li>复制授权码，在Python代码中使用</li>
+                    <li>复制授权码，在软件中使用</li>
                 </ol>
             </div>
         </div>
